# event_services

./: Makefile  README.md  pyproject.toml
cybercare_event_services/: __init__.py
cybercare_event_services/event_consumer/: config.yaml  consumer.py
cybercare_event_services/event_propagator/: __init__.py  config.yaml  events.json  propagator.py
